<resources>
    <string name="app_name" translatable="false">Gauguin</string>
    <string name="main_menu_item_new">New Game</string>
    <string name="main_menu_item_load_game">Load</string>
    <string name="main_menu_item_save_game">Save</string>
    <string name="main_menu_item_save_game_with_comment">Save with comment</string>
    <string name="main_menu_item_restart_game">Restart Game</string>
    <string name="main_menu_item_show_statistics">Statistics</string>
    <string name="main_menu_item_open_settings">Settings</string>
    <string name="main_menu_item_show_help">Help</string>
    <string name="main_menu_item_open_github_issues">Bugs and Features</string>
    <string name="main_activity_application_bar_item_show_mistakes">Show mistakes</string>
    <string name="main_activity_application_bar_item_reveal_cell">Reveal cell</string>
    <string name="main_activity_application_bar_item_reveal_cage">Reveal cage</string>
    <string name="main_activity_application_bar_item_reveal_all_cells">Show solution</string>
    <string name="main_activity_application_bar_item_erase_selected_cell">Erase Cell</string>
    <string name="main_activity_application_bar_item_undo_one_step">Undo</string>
    <string name="main_activity_application_bar_item_current_game_saved">Game saved successfully.</string>
    <string name="main_activity_reveal_or_other_help_will_brake_streak_title">Reset current streak?</string>
    <plurals name="main_activity_reveal_or_other_help_will_brake_streak_message">
        <item quantity="one">If you use this assistance, this will count as a game solved with help. Thus, your current streak of %d game will be reset to zero.\n\nDo you want to use this help and reset the current streak?</item>
        <item quantity="other">If you use this assistance, this will count as a game solved with help. Thus, your current streak of %d games will be reset to zero.\n\nDo you want to use this help and reset the current streak?</item>
    </plurals>
    <string name="main_activity_reveal_or_other_help_will_brake_streak_ok_button">OK</string>
    <string name="main_activity_reveal_or_other_help_will_brake_streak_cancel_button">Cancel</string>
    <string name="load_game_screen_title">Load Game</string>
    <string name="load_game_screen_action_load">Load</string>
    <string name="load_game_screen_action_delete">Delete</string>
    <string name="load_game_screen_no_saved_games_found">No save games found.</string>
    <string name="load_game_screen_delete_all_button">Delete All</string>
    <string name="game_info_initial_play_time_zero" translatable="false">00:00</string>
    <plurals name="game_info_popup_mistakes">
        <item quantity="one">1 mistake</item>
        <item quantity="other">%d mistakes</item>
    </plurals>
    <string name="game_nishio_check_button">Check Nishio</string>
    <string name="game_nishio_check_popup_wrong_solution">This nishio solution is not correct.</string>
    <string name="game_check_possible_solution_button">Check Solution</string>
    <string name="game_check_possible_solution_popup_wrong_solution">This solution is not correct.</string>
    <string name="fast_finishing_mode_fast_finishing_mode_active_label">Fast Finishing Mode</string>
    <string name="fast_finishing_mode_deactivate_fast_finishing_mode_button">Close</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_puzzles_started">Puzzles started</string>
    <string name="statistics_puzzles_hinted">Puzzles hinted</string>
    <string name="statistics_puzzles_solved">Puzzles solved</string>
    <string name="statistics_puzzles_solved_current_streak">Current streak</string>
    <string name="statistics_puzzles_longest_streak">Longest streak</string>
    <string name="statistics_button_close">Close</string>
    <string name="statistics_reset_statistics_button">Reset</string>
    <string name="statistics_diagram_difficulty">Difficulty</string>
    <string name="statistics_diagram_duration">Duration</string>
    <string name="statistics_diagram_streaks">Streaks</string>
    <string name="statistics_diagram_threshold_average_value">Average</string>
    <string name="statistics_label_no_statistics_available_yet">After solving a first game, you will find diagrams here dealing with:\n- the complexity of the solved games\n- the play time of the games</string>
    <string name="statistics_info_value_minimum_short">Min</string>
    <string name="statistics_info_value_average_short">Avg</string>
    <string name="statistics_info_value_maximum_short">Max</string>
    <string name="statistics_dialog_reset_statistics_title">Reset statistics?</string>
    <string name="statistics_dialog_reset_statistics_message">All statistics will be deleted.</string>
    <string name="statistics_dialog_reset_statistics_ok_button">OK</string>
    <string name="statistics_dialog_reset_statistics_cancel_button">Cancel</string>
    <string name="help_overall_title">Help</string>
    <string name="help_rules_title">Rules</string>
    <string name="help_rules_summary">Fill in each row and column with the available numbers. Numbers may only be used once per row and column.\n\nThick lines indicate \'cages\', where each cage has a math puzzle to be solved. For example, \'5+\' means all numbers in that cage must add up to 5.\n\nNumbers may be used more than once per cage, as long as there is only one of each number per row or column.</string>
    <string name="help_instructions_title">How to play</string>
    <string name="help_instructions_summary">Fill up the grid cells using the number buttons. To enter a number to the selected cell, long-press the number button. To add or remove a possible number, just press the number button.\n\nUse the question mark to see if there are any mistakes in the filled cells.\n\nGauguin will auto-save your game if you need to stop.</string>
    <string name="help_dismiss_dialog_button">OK</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_name" translatable="false">@string/versionName</string>
    <string name="about_license_title">License</string>
    <string name="about_license_summary">GNU General Public License v3</string>
    <string name="about_website_title">Project Home</string>
    <string name="about_website_summary">Visit our Homepage at <a href="https://gauguin.app">https://gauguin.app</a>\nReport any bugs or suggestions at <a href="https://github.com/meikpiep/gauguin">https://github.com/meikpiep/gauguin</a></string>
    <string name="about_developers_title">Developer</string>
    <string name="about_developers_summary">Meik Piepmeyer\n \nForked from HoloKenMod 1.6.1 by Adam Queler\n\nForked from Holoken 1.1.1 by Amanda Chow, with much credit to Ben Buxton and Stephen Lee of Mathdoku</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_changelog_summary">See <a href="https://github.com/meikpiep/gauguin/releases">https://github.com/meikpiep/gauguin/releases</a></string>
    <string name="dialog_restart_current_game_title">Restart game?</string>
    <string name="dialog_restart_current_game_message">This game will be restarted.</string>
    <string name="dialog_restart_current_game_ok_button">OK</string>
    <string name="dialog_restart_current_game_cancel_button">Cancel</string>
    <string name="dialog_save_current_game_with_comment_title">Save game with comment?</string>
    <string name="dialog_save_current_game_with_comment_message">Please type in your comment below.</string>
    <string name="dialog_save_current_game_with_comment_ok_button">OK</string>
    <string name="dialog_save_current_game_with_comment_cancel_button">Cancel</string>
    <string name="dialog_delete_game_title">Delete game?</string>
    <string name="dialog_delete_game_message">This game will be deleted.</string>
    <string name="dialog_delete_game_ok_button">OK</string>
    <string name="dialog_delete_game_cancel_button">Cancel</string>
    <string name="dialog_delete_all_games_title">Delete all games?</string>
    <string name="dialog_delete_all_games_message">All saved games will be deleted.</string>
    <string name="dialog_delete_all_games_ok_button">OK</string>
    <string name="dialog_delete_all_games_cancel_button">Cancel</string>
    <string name="game_setting_difficulty_label">Difficulty</string>
    <string name="game_setting_single_cells_usage_label">Single cells</string>
    <string name="game_setting_operations_label">Operations</string>
    <string name="game_setting_digits_label">Digits</string>
    <string name="game_setting_digits_preview_label">Preview</string>
    <string name="game_setting_show_operators_toggle">Show operators</string>
    <string name="game_setting_difficulty_any">Any</string>
    <string name="game_setting_difficulty_very_easy">Very Easy</string>
    <string name="game_setting_difficulty_easy">Easy</string>
    <string name="game_setting_difficulty_medium">Medium</string>
    <string name="game_setting_difficulty_hard">Hard</string>
    <string name="game_setting_difficulty_extreme">Very hard</string>
    <string name="game_setting_switch_multi_selection_of_difficulties">Multi difficulties selection</string>
    <string name="game_setting_single_cages_fixed_number">Fixed number</string>
    <string name="game_setting_single_cages_no_singles">No singles</string>
    <string name="game_setting_single_cages_dynamic">Dynamic</string>
    <string name="game_setting_operations_all">+ - × ÷</string>
    <string name="game_setting_operations_addition_substraction">+ -</string>
    <string name="game_setting_operations_addition_multiplication">+ ×</string>
    <string name="game_setting_operations_multiplication">×</string>
    <string name="setting_flag_bad_maths_title">Highlight incorrect maths</string>
    <string name="setting_flag_duplicates_title">Highlight duplicates</string>
    <string name="setting_remove_pencils_title">Auto-remove pencil marks</string>
    <string name="setting_remove_pencils_summary">In the same row or column as a penned number</string>
    <string name="setting_theme_title">Theme</string>
    <string name="setting_theme_entry_light">Light</string>
    <string name="setting_theme_entry_dark">Dark</string>
    <string name="setting_theme_entry_system">System Default</string>
    <string name="setting_theme_entry_dynamic_colors">Dynamic Colors</string>
    <string name="setting_pencil_at_start_title">Pencil marks at game start</string>
    <string name="setting_pencil_at_start_summary_on">Begin with filled pencil marks</string>
    <string name="setting_pencil_at_start_summary_off">Empty pencil marks at start</string>
    <string name="setting_pencil_3x3_title">Layout of pencil marks</string>
    <string name="setting_pencil_3x3_summary_on">Mimic keypad layout</string>
    <string name="setting_pencil_3x3_summary_off">Show in numerical order</string>
    <string name="setting_show_timer_title">Show game timer</string>
    <string name="setting_show_fullscreen_title">Show full screen</string>
    <string name="setting_keep_screen_on_title">Keep screen on</string>
    <string name="setting_flag_use_fast_finishing_mode_title">Use Fast Finishing Mode</string>
    <string name="setting_flag_use_fast_finishing_mode_summary_on">At the end of the game, enter numbers directly by tapping on single pencil marks</string>
    <string name="setting_flag_use_fast_finishing_mode_summary_off">Keep filling single pencil marks as number via long tapping</string>
    <string name="setting_fill_single_cages_at_start_title">Fill single cages at start</string>
    <string name="setting_fill_single_cages_at_start_summary_on">Single cages will be filled automatically</string>
    <string name="setting_fill_single_cages_at_start_summary_off">Single cages will be left empty</string>
    <string name="setting_maximum_cell_size_summary">Maximum cell size of the grid in \'dp\'</string>
</resources>