<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainGameDifficultyLevelConstaintLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:orientation="vertical"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigation_drawer_theme_light"
            style="@style/VerticalButtonGroupButtonOnSecondary"
            app:icon="@drawable/light_mode_24px"
            android:text="@string/setting_theme_entry_light"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigation_drawer_theme_dark"
            style="@style/VerticalButtonGroupButtonOnSecondary"
            app:icon="@drawable/dark_mode_24px"
            android:text="@string/setting_theme_entry_dark"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigation_drawer_theme_auto"
            style="@style/VerticalButtonGroupButtonOnSecondary"
            app:icon="@drawable/night_sight_auto_24px"
            android:text="@string/setting_theme_entry_system"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigation_drawer_theme_dynamic_colors"
            style="@style/VerticalButtonGroupButtonOnSecondary"
            android:text="@string/setting_theme_entry_dynamic_colors"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>